# NGPS_autoacquire

./: .gitignore  ngps_acq_debug.ppm  runtest
NGPS_autoacquire/: CMakeLists.txt  README.md  ngps_autoacqire.c
NGPS_autoacquire.xcodeproj/: project.pbxproj
NGPS_autoacquire.xcodeproj/project.xcworkspace/xcuserdata/cfremling.xcuserdatad/: UserInterfaceState.xcuserstate
NGPS_autoacquire.xcodeproj/xcshareddata/xcschemes/: NGPS_autoacquire.xcscheme
NGPS_autoacquire.xcodeproj/xcuserdata/cfremling.xcuserdatad/xcschemes/: xcschememanagement.plist
NGPS_autoacquire/src/: ngps_acq.c
TEST/: SLICEVIEW_20241117-002341.fits  SLICEVIEW_20241117-002449.fits
